--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-    <meta name="description" content="Information about the different services the Inn provides such as 
-    shuttles, child care and changing rooms." />
+    <title>Resources</title>
+    <meta name="description" content="This page sites all the picture and information sources that were used." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -35,9 +34,9 @@
         <nav>
             <ul class="mainMenu">
                 <li class="menubutton"><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" class="currentpage">Home</a></li>
                 <li><a href="temples.html">Temples</a></li>
-                <li><a href="services.html" class="currentpage">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -49,7 +48,19 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Services</h2>
+        <h2>Resoruces</h2>
+        <h3>Home Page</h3>
+        <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah Temple
+            Information</a><br>
+        <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah Temple
+            Photo</a><br>
+        <a href="">Current Weather Conditions</a><br>
+        <a href="">Three Day Weather Forecast</a>
+        <h3>Temples Page</h3>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
     </main>
     <!-- FOOTER HERE -->
     <footer>
