--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-    <meta name="description" content="Information about the different services the Inn provides such as 
-    shuttles, child care and changing rooms." />
+    <title>Temples</title>
+    <meta name="description" content="Description of several different temples as well as their contact 
+    information and history." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -36,8 +36,8 @@
             <ul class="mainMenu">
                 <li class="menubutton"><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="temples.html">Temples</a></li>
-                <li><a href="services.html" class="currentpage">Services</a></li>
+                <li><a href="temples.html" class="currentpage">Temples</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -49,7 +49,30 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Services</h2>
+        <div class="page-intro">
+            <h2>Temples</h2>
+            <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
+                go as smoothly as possible. To help you prepare for your temple attendance we offer
+                helpful information about the following temples that are located closest to our hotels.</p>
+        </div>
+        <div id="temple-grid">
+            <div class="cards">
+                <h3>Saratoga Springs Utah Temple</h3>
+                <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpeg" alt="Saratoga Springs Utah Temple">
+            </div>
+            <div class="cards">
+                <h3>Bountiful Utah Temple</h3>
+                <img class="all-images" src="images/BountifulUtahTemple.jpg" alt="Bountiful Utah Temple">
+            </div>
+            <div class="cards">
+                <h3>Ogden Utah Temple</h3>
+                <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Ogden Utah Temple">
+            </div>
+            <div class="cards">
+                <h3>St. George Utah Temple</h3>
+                <img class="all-images" src="images/StGeorgeUtahTemple.jpg" alt="St. George Utah Temple">
+            </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
