--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -58,8 +58,8 @@
                 serve you and your temple attendance needs at the Temple Inn and Suites.
             </p>
         </div>
-        <div id="home-grid">
-            <div class="cards" id="temple-intro">
+        <div class="main-divs" id="home-grid">
+            <div class="cards">
                 <h2>Temple Spotlight</h2>
                 <h3>Saratoga Springs Utah, USA</h3>
                 <p>The Saratoga Springs Utah Temple was announced on 2 April 2017. The groundbreaking and Site
