--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -48,19 +48,63 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Resoruces</h2>
-        <h3>Home Page</h3>
-        <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah Temple
-            Information</a><br>
-        <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah Temple
-            Photo</a><br>
-        <a href="">Current Weather Conditions</a><br>
-        <a href="">Three Day Weather Forecast</a>
-        <h3>Temples Page</h3>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <div>
+            <div>
+                <h2>Resoruces</h2>
+                <h3>Home Page</h3>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
+                    Temple
+                    Information</a><br>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
+                    Temple
+                    Photo</a><br>
+                <a href="">Current Weather Conditions</a><br>
+                <a href="">Three Day Weather Forecast</a>
+            </div>
+            <div>
+                <h3>Temples Page</h3>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
+                    Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image</a><br>
+            </div>
+            <div>
+                <h3>Saratoga Springs Temple Page</h3>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
+                    Temple Information</a><br>
+            </div>
+            <div>
+                <h3>Payson Temple Page</h3>
+                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple
+                    Information</a><br>
+            </div>
+            <div>
+                <h3>Ogden Temple Page</h3>
+                <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple
+                    Information</a><br>
+            </div>
+            <div>
+                <h3>Payton Temple Page</h3>
+                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple
+                    Information</a><br>
+            </div>
+            <div>
+                <h3>Services Page</h3>
+            </div>
+            <div>
+                <h3>Reservations Page</h3>
+            </div>
+            <div>
+                <h3>Full-Time Missionaries Page</h3>
+            </div>
+            <div>
+                <h3>Contact Page</h3>
+            </div>
+            <div>
+                <h3>Form Conformation Pages</h3>
+            </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
