--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -60,16 +60,18 @@
         </div>
         <div class="main-divs" id="home-grid">
             <div class="cards">
+                <img class="all-images" src="images/SaratogaSpringsUtahTemple2.jpg" alt="Saratoga Springs Utah Temple">
+            </div>
+            <div class="cards">
                 <h2>Temple Spotlight</h2>
                 <h3>Saratoga Springs Utah, USA</h3>
                 <p>The Saratoga Springs Utah Temple was announced on 2 April 2017. The groundbreaking and Site
                     dedication took place on 19 October 2019 by Elder Craig C. Christensen. At the groundbreaking
                     Elder Christensen said, "I realized…how this particular temple will bless many individuals
-                    and families, including your children, your marriages, your families, and, especially, many
-                    of your ancestors. This is the place where your children and families will be
+                    and families... This is the place where your children and families will be
                     protected from the evils that are ever present in the world today, and to make sacred covenants
                     with the Lord." This temple is not yet complete, but is scheduled to be dedicated sometime in
-                    2022. It will have four instruction rooms, six sealing rooms, and one baptistry.
+                    2022.
                 </p>
             </div>
             <div class="cards">
