--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -52,6 +52,8 @@
             <div>
                 <h2>Resoruces</h2>
                 <h3>Home Page</h3>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/news/">Saratoga Springs
+                    Utah Temple Image</a>
                 <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
                     Temple
                     Information</a><br>
