--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -55,7 +55,10 @@
                 go as smoothly as possible. To help you prepare for your temple attendance we offer
                 helpful information about the following temples that are located closest to our hotels.</p>
         </div>
-        <div class="main-divs" id="temple-grid">
+
+
+
+        <!-- <div class="main-divs" id="temple-grid">
             <div class="t-cards">
                 <div class="cards">
                     <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpeg"
@@ -89,7 +92,7 @@
                     <a href="layton.html">Layton</a>
                 </div>
             </div>
-        </div>
+        </div>-->
     </main>
     <!-- FOOTER HERE -->
     <footer>
