--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -55,6 +55,7 @@
                 go as smoothly as possible. To help you prepare for your temple attendance we offer
                 helpful information about the following temples that are located closest to our hotels.</p>
         </div>
+        <div class="templeCards"></div>
 
 
 
