--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -142,6 +142,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/temples.js"></script>
 </body>
 
 </html>
