--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -60,7 +60,7 @@
         </div>
         <div class="main-divs" id="home-grid">
             <div class="cards">
-                <img class="all-images" src="images/SaratogaSpringsUtahTemple2.jpg" alt="Saratoga Springs Utah Temple">
+                <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
             </div>
             <div class="cards">
                 <h2>Temple Spotlight</h2>
@@ -75,7 +75,7 @@
                 </p>
             </div>
             <div class="cards">
-                <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpeg" alt="Saratoga Springs Temple">
+                <img class="all-images" src="images/SaratogaSpringsUtahTemple3.jpg" alt="Saratoga Springs Temple">
             </div>
 
             <div class="cards">
