--- a/chamber/index.html
+++ b/chamber/index.html
@@ -121,6 +121,32 @@
                 </div>
             </div>
             <div class="box6">
+                <div class="busSec">
+                    <h2 class="busName"></h2>
+                    <img class="busLogo" src="" alt="" />
+                    <p class="busPhone"></p>
+                    <p class="busWebsite"></p>
+                    <hr />
+                    <p class="busMembership"></p>
+                </div>
+                <div class="busSec">
+                    <h2 class="busName"></h2>
+                    <img class="busLogo" src="" alt="" />
+                    <p class="busPhone"></p>
+                    <p class="busWebsite"></p>
+                    <hr />
+                    <p class="busMembership"></p>
+                </div>
+                <div class="busSec">
+                    <h2 class="busName"></h2>
+                    <img class="busLogo" src="" alt="" />
+                    <p class="busPhone"></p>
+                    <p class="busWebsite"></p>
+                    <hr />
+                    <p class="busMembership"></p>
+                </div>
+            </div>
+            <!--<div class="box6">
                 <div class="split1">
                     <h2 class="boat">Dinner Cruise</h2>
                     <picture>
@@ -166,8 +192,8 @@
                     <p>
                         <b>www.saratogaboattours.com<br>
                             801-543-9876 </b>
-                    </p>
-                </div>
+                    </p>-->
+            </div>
             </div>
         </section>
     </main>
@@ -205,6 +231,7 @@
     <script src="js/headfootdate.js"></script>
     <script src="js/windchill.js"></script>
     <script src="js/meetingbanner.js"></script>
+    <script src="js/spotlight.js"></script>
 </body>
 
 </html>
