--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -55,7 +55,17 @@
                 go as smoothly as possible. To help you prepare for your temple attendance we offer
                 helpful information about the following temples that are located closest to our hotels.</p>
         </div>
+        <div class="templeinfo-button">
+            <a href="ordinanceschedule.html">Ordinance Schedule</a>
+        </div>
+        <div class="templeinfo-button">
+            <a href="sessionschedule.html">Session Schedule</a>
+        </div>
+        <div class="templeinfo-button">
+            <a href="templeclosureschedule.html">Temple Closure Schedule</a>
+        </div>
         <div class="templeCards"></div>
+
 
 
 
