--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -55,55 +55,27 @@
                 go as smoothly as possible. To help you prepare for your temple attendance we offer
                 helpful information about the following temples that are located closest to our hotels.</p>
         </div>
-        <div class="templeinfo-button">
-            <a href="ordinanceschedule.html">Ordinance Schedule</a>
+        <div class="button-grid">
+            <div class="templeinfo-button" id="temple-btn1">
+                <a href="ordinanceschedule.html">Ordinance Schedule</a>
+            </div>
+            <div class="templeinfo-button" id="temple-btn2">
+                <a href="sessionschedule.html">Session Schedule</a>
+            </div>
+            <div class="templeinfo-button" id="temple-btn3">
+                <a href="templeclosureschedule.html">Temple Closure Schedule</a>
+            </div>
         </div>
-        <div class="templeinfo-button">
-            <a href="sessionschedule.html">Session Schedule</a>
+        <div id="cardborder">
+            <div class="templeCards"></div>
         </div>
-        <div class="templeinfo-button">
-            <a href="templeclosureschedule.html">Temple Closure Schedule</a>
+        <div class="quote">
+            <h3>Temple Quote</h3>
+            <p>"When you come to the temple you will love your family with a deeper
+                love than you have ever felt before. The temple is about families."<br>
+                —Richard H. Winkel</p>
         </div>
-        <div class="templeCards"></div>
 
-
-
-
-        <!-- <div class="main-divs" id="temple-grid">
-            <div class="t-cards">
-                <div class="cards">
-                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpeg"
-                        alt="Saratoga Springs Utah Temple">
-                </div>
-                <div class="temple-button">
-                    <a href="saratoga.html">Saratoga Springs</a>
-                </div>
-            </div>
-            <div class="t-cards">
-                <div class="cards">
-                    <img class="all-images" src="images/paysonutahtemple1.jpg" alt="Payson Utah Temple">
-                </div>
-                <div class="temple-button">
-                    <a href="payson.html">Payson</a>
-                </div>
-            </div>
-            <div class="t-cards">
-                <div class="cards">
-                    <img class="all-images" src="images/ogdenutahtemple1.jpg" alt="Ogden Utah Temple">
-                </div>
-                <div class="temple-button">
-                    <a href="ogden.html">Ogden</a>
-                </div>
-            </div>
-            <div class="t-cards">
-                <div class="cards">
-                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
-                </div>
-                <div class="temple-button">
-                    <a href="layton.html">Layton</a>
-                </div>
-            </div>
-        </div>-->
     </main>
     <!-- FOOTER HERE -->
     <footer>
