--- a/templeinn/templeclosureschedule.html
+++ b/templeinn/templeclosureschedule.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples</title>
-    <meta name="description" content="Description of several different temples as well as their contact 
-    information and history." />
+    <title>Temple Closure Schedules</title>
+    <meta name="description" content="Temple closure information about several temples." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -49,7 +48,115 @@
 
     <!-- CONTENT HERE -->
     <main>
+        <div id="">
+            <div class="page-intro">
+                <h2>Temple Closure Schedule</h2>
+                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
+                    go as smoothly as possible. To help you prepare for your temple attendance we offer
+                    helpful information about the following temples that are located closest to our hotels.</p>
+            </div>
+            <div>
+                <div id="back-button">
+                    <a href="temples.html">
+                        <-Back to Temples </a>
+                </div>
+            </div>
+            <div class="main-divs" id="ordinance-grid">
+                <div class="cards">
+                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                        alt="Saratoga Springs Utah Temple">
+                    <h2>Saratoga Springs</h2>
+                    <h3>2022 Closure</h3>
+                    <p>Saturday, 1 October 2022<br><br>
+                        <b>Monday, 10 October 2022 - Monday, 17 October 2022</b><br><br>
+                        Wednesday, 23 November 2022 (Limited Operations)<br><br>
+                        Thursday, 24 November 2022<br><br>
+                        Friday, 23 December 2022 (Limited Operations)<br><br>
+                        Saturday, 24 December 2022<br><br>
+                        Saturday, 31 December 2022 (Limited Operations)<br><br>
+                    <h3>2023 Closures</h3>
+                    <b>Monday, 27 March 2023 - Monday, 10 April 2023</b><br><br>
+                    Tuesday, 4 July 2023<br><br>
+                    Saturday, 30 September 2023<br><br>
+                    <b>Monday, 9 October 2023 - Monday, 23 October 2023</b><br><br>
+                    Wednesday, 22 November 2023 (Limited Operations)<br><br>
+                    Thursday, 23 November 2023<br><br>
+                    Saturday, 23 December 2023 (Limited Operations)<br><br>
+                    Saturday, 30 December 2023 (Limited Operations)</p>
 
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Payson</h2>
+                    <h3>2022 Closure</h3>
+                    <p>Saturday, 1 October 2022<br><br>
+                        <b>Monday, 10 October 2022 - Monday, 17 October 2022</b><br><br>
+                        Wednesday, 23 November 2022 (Limited Operations)<br><br>
+                        Thursday, 24 November 2022<br><br>
+                        Friday, 23 December 2022 (Limited Operations)<br><br>
+                        Saturday, 24 December 2022<br><br>
+                        Saturday, 31 December 2022 (Limited Operations)<br><br>
+                    <h3>2023 Closures</h3>
+                    <b>Monday, 27 March 2023 - Monday, 10 April 2023</b><br><br>
+                    Tuesday, 4 July 2023<br><br>
+                    Saturday, 30 September 2023<br><br>
+                    <b>Monday, 9 October 2023 - Monday, 23 October 2023</b><br><br>
+                    Wednesday, 22 November 2023 (Limited Operations)<br><br>
+                    Thursday, 23 November 2023<br><br>
+                    Saturday, 23 December 2023 (Limited Operations)<br><br>
+                    Saturday, 30 December 2023 (Limited Operations)</p>
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Layton</h2>
+                    <h3>2022 Closures</h3>
+                    <p><b>Monday, 29 August 2022 - Monday, 12 September 2022</b><br><br>
+                        Saturday, 1 October 2022<br><br>
+                        Wednesday, 23 November 2022 (Limited Operations)<br><br>
+                        Thursday, 24 November 2022<br><br>
+                        Saturday, 24 December 2022<br><br>
+                        Saturday, 31 December 2022 (Limited Operations)<br><br>
+                        Saturday, 31 December 2022<br><br>
+                    <h3>2023 Closures</h3>
+                    <b>Monday, 27 March 2023 - Monday, 10 April 2023</b><br><br>
+                    Saturday, 20 May 2023 (Limited Operations)<br><br>
+                    Tuesday, 4 July 2023<br><br>
+                    <b>Monday, 28 August 2023 - Monday, 11 September 2023</b><br><br>
+                    Saturday, 7 October 2023<br><br>
+                    Tuesday, 31 October 2023 (Limited Operations)<br><br>
+                    Thursday, 23 November 2023 (Limited Operations)<br><br>
+                    Friday, 24 November 2023</p>
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Ogden</h2>
+                    <h3>2022 Closures</h3>
+                    <p><b>Monday, 29 August 2022 - Monday, 12 September 2022</b><br><br>
+                        Saturday, 1 October 2022<br><br>
+                        Wednesday, 23 November 2022 (Limited Operations)<br><br>
+                        Thursday, 24 November 2022<br><br>
+                        Saturday, 24 December 2022<br><br>
+                        Saturday, 31 December 2022 (Limited Operations)<br><br>
+                        Saturday, 31 December 2022<br><br>
+                    <h3>2023 Closures</h3>
+                    <b>Monday, 27 March 2023 - Monday, 10 April 2023</b><br><br>
+                    Saturday, 20 May 2023 (Limited Operations)<br><br>
+                    Tuesday, 4 July 2023<br><br>
+                    <b>Monday, 28 August 2023 - Monday, 11 September 2023</b><br><br>
+                    Saturday, 7 October 2023<br><br>
+                    Tuesday, 31 October 2023 (Limited Operations)<br><br>
+                    Thursday, 23 November 2023 (Limited Operations)<br><br>
+                    Friday, 24 November 2023</p>
+                </div>
+            </div>
+            <div class="quote">
+                <h3>Temple Quote</h3>
+                <p>"As a result of the sacred ordinances performed in the holy house of God, no light need be
+                    permanently
+                    extinguished, no voice permanently stilled, no place in our heart permanently left vacant."
+                    —Thomas S. Monson</p>
+            </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
