--- a/templeinn/ordinanceschedule.html
+++ b/templeinn/ordinanceschedule.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temples</title>
+    <title>Temple Ordinances Schedule</title>
     <meta name="description" content="Description of several different temples as well as their contact 
     information and history." />
 
@@ -49,7 +49,206 @@
 
     <!-- CONTENT HERE -->
     <main>
-
+        <div id="">
+            <div class="page-intro">
+                <h2>Temple Ordinance Schedule</h2>
+                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
+                    go as smoothly as possible. To help you prepare for your temple attendance we offer
+                    helpful information about the following temples that are located closest to our hotels.</p>
+            </div>
+            <div>
+                <div id="back-button">
+                    <a href="temples.html">
+                        <-Back to Temples </a>
+                </div>
+            </div>
+            <div class="main-divs" id="ordinance-grid">
+                <div class="cards">
+                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                        alt="Saratoga Springs Utah Temple">
+                    <h2>Saratoga Springs</h2>
+                    <h3>Baptism Schedule</h3>
+                    <p><b>Monday: Closed</b><br>
+                        <b>Tuesday:</b> 5am - 7am (Walk-ins only), 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 5am - 5pm (Walk-ins and appointments), 6pm - 7pm (Walk-ins and
+                        appointments)<br>
+                        <b>Thursday:</b> 5am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 5am - 6pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Saturday:</b> 6am - 5:30pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Initiatory Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Wednesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Thursday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Friday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Saturday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Endowment Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Sealing Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 7am - 11am, 4pm - 8pm (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Payson</h2>
+                    <h3>Baptism Schedule</h3>
+                    <p><b>Monday: Closed</b><br>
+                        <b>Tuesday:</b> 5am - 7am (Walk-ins only), 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 5am - 5pm (Walk-ins and appointments), 6pm - 7pm (Walk-ins and
+                        appointments)<br>
+                        <b>Thursday:</b> 5am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 5am - 6pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Saturday:</b> 6am - 5:30pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Initiatory Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Wednesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Thursday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Friday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Saturday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Endowment Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Sealing Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 7am - 11am, 4pm - 8pm (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Layton</h2>
+                    <h3>Baptism Schedule</h3>
+                    <p><b>Monday: Closed</b><br>
+                        <b>Tuesday:</b> 5am - 7am (Walk-ins only), 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 5am - 5pm (Walk-ins and appointments), 6pm - 7pm (Walk-ins and
+                        appointments)<br>
+                        <b>Thursday:</b> 5am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 5am - 6pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Saturday:</b> 6am - 5:30pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Initiatory Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Wednesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Thursday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Friday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Saturday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Endowment Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Sealing Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 7am - 11am, 4pm - 8pm (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                </div>
+                <div class="cards">
+                    <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
+                    <h2>Ogden</h2>
+                    <h3>Baptism Schedule</h3>
+                    <p><b>Monday: Closed</b><br>
+                        <b>Tuesday:</b> 5am - 7am (Walk-ins only), 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 5am - 5pm (Walk-ins and appointments), 6pm - 7pm (Walk-ins and
+                        appointments)<br>
+                        <b>Thursday:</b> 5am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 5am - 6pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Saturday:</b> 6am - 5:30pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Initiatory Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Wednesday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Thursday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Friday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Saturday:</b> 6am - 8pm (appointments only)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Endowment Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                    <h3>Sealing Schedule</h3>
+                    <p>
+                        <b>Monday:</b> Closed
+                        <b>Tuesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Wednesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Thursday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Friday:</b> 7am - 8pm (Walk-ins and appointments)<br>
+                        <b>Saturday:</b> 7am - 11am, 4pm - 8pm (Walk-ins and appointments)<br>
+                        <b>Sunday:</b> Closed
+                    </p>
+                </div>
+            </div>
+            <div class="quote">
+                <h3>Temple Quote</h3>
+                <p>""I want to see the temple built in a manner that it will endure through the Millennium.
+                    This is not the only temple we shall build; there will be hundreds of them built and
+                    dedicated to the Lord."
+                    —Brigham Young</p>
+            </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
