--- a/templeinn/ordinanceschedule.html
+++ b/templeinn/ordinanceschedule.html
@@ -243,7 +243,7 @@
             </div>
             <div class="quote">
                 <h3>Temple Quote</h3>
-                <p>""I want to see the temple built in a manner that it will endure through the Millennium.
+                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
                     This is not the only temple we shall build; there will be hundreds of them built and
                     dedicated to the Lord."
                     —Brigham Young</p>
