--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -72,13 +72,13 @@
                 <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image</a><br>
             </div>
             <div>
-                <h3>Saratoga Springs Temple Page</h3>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
+                <h3>Temple Ordinance Schedule Page</h3>
+                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Saratoga Springs Utah
                     Temple Information</a><br>
             </div>
             <div>
-                <h3>Payson Temple Page</h3>
-                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple
+                <h3>Temple Closure Page</h3>
+                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Payson Utah Temple
                     Information</a><br>
             </div>
             <div>
