--- a/templeinn/laytonschedule.html
+++ b/templeinn/laytonschedule.html
@@ -56,84 +56,9 @@
                     helpful information about the following temples that are located closest to our hotels.</p>
             </div>
             <div>
-                <div id="back-button">
-                    <a href="temples.html">
-                        <-Back to Temples </a>
-                </div>
-
-                <div class="cards">
-                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Saratoga Springs Utah Temple">
-                    <h2>Layton Temple</h2>
-                    <h3>Baptism Schedule</h3>
-                    <p><b>Monday: Closed</b><br>
-                        <b>Tuesday:</b> 5am - 7am (Walk-ins only), 7am - 8pm (Walk-ins and appointments)<br>
-                        <b>Wednesday:</b> 5am - 5pm (Walk-ins and appointments), 6pm - 7pm (Walk-ins and
-                        appointments)<br>
-                        <b>Thursday:</b> 5am - 8pm (Walk-ins and appointments)<br>
-                        <b>Friday:</b> 5am - 6pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
-                        <b>Saturday:</b> 6am - 5:30pm (Walk-ins and appointments), 6pm - 8pm (Family Priority Time)<br>
-                        <b>Sunday:</b> Closed
-                    </p>
-                    <h3>Initiatory Schedule</h3>
-                    <p>
-                        <b>Monday:</b> Closed
-                        <b>Tuesday:</b> 6am - 8pm (appointments only)<br>
-                        <b>Wednesday:</b> 6am - 8pm (appointments only)<br>
-                        <b>Thursday:</b> 6am - 8pm (appointments only)<br>
-                        <b>Friday:</b> 6am - 8pm (appointments only)<br>
-                        <b>Saturday:</b> 6am - 8pm (appointments only)<br>
-                        <b>Sunday:</b> Closed
-                    </p>
-                    <h3>Endowment Schedule</h3>
-                    <p>
-                        <b>Monday:</b> Closed
-                        <b>Tuesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
-                        <b>Wednesday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
-                        <b>Thursday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
-                        <b>Friday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
-                        <b>Saturday:</b> 6am - 7pm on the hour (Walk-ins and appointments)<br>
-                        <b>Sunday:</b> Closed
-                    </p>
-                    <h3>Sealing Schedule</h3>
-                    <p>
-                        <b>Monday:</b> Closed
-                        <b>Tuesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
-                        <b>Wednesday:</b> 7am - 8pm (Walk-ins and appointments)<br>
-                        <b>Thursday:</b> 7am - 8pm (Walk-ins and appointments)<br>
-                        <b>Friday:</b> 7am - 8pm (Walk-ins and appointments)<br>
-                        <b>Saturday:</b> 7am - 11am, 4pm - 8pm (Walk-ins and appointments)<br>
-                        <b>Sunday:</b> Closed
-                    </p>
-
-                    <h2>Temple Closures</h2>
-                    <h3>2022 Closures</h3>
-                    <p><b>Monday, 29 August 2022 - Monday, 12 September 2022</b><br>
-                        Saturday, 1 October 2022<br>
-                        Wednesday, 23 November 2022 (Limited Operations)<br>
-                        Thursday, 24 November 2022<br>
-                        Saturday, 24 December 2022<br>
-                        Saturday, 31 December 2022 (Limited Operations)<br>
-                        Saturday, 31 December 2022<br>
-                    <h3>2023 Closures</h3>
-                    <b>Monday, 27 March 2023 - Monday, 10 April 2023</b><br>
-                    Saturday, 20 May 2023 (Limited Operations)<br>
-                    Tuesday, 4 July 2023<br>
-                    <b>Monday, 28 August 2023 - Monday, 11 September 2023</b><br>
-                    Saturday, 7 October 2023<br>
-                    Tuesday, 31 October 2023 (Limited Operations)<br>
-                    Thursday, 23 November 2023 (Limited Operations)<br>
-                    Friday, 24 November 2023</p>
-                </div>
 
             </div>
-            <div class="quote">
-                <h3>Temple Quote</h3>
-                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
-                    This is not the only temple we shall build; there will be hundreds of them built and
-                    dedicated to the Lord."
-                    —Brigham Young</p>
-            </div>
-        </div>
+
     </main>
     <!-- FOOTER HERE -->
     <footer>
@@ -182,6 +107,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/laytonschedule.js"></script>
 </body>
 
 </html>
