--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -55,24 +55,49 @@
                 go as smoothly as possible. To help you prepare for your temple attendance we offer
                 helpful information about the following temples that are located closest to our hotels.</p>
         </div>
-        <div class="button-grid">
-            <div class="templeinfo-button" id="temple-btn1">
-                <a href="ordinanceschedule.html">Ordinance Schedule</a>
+
+        <div class="main-divs" id="temple-grid">
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                        alt="Saratoga Springs Utah Temple">
+                </div>
+                <div class="temple-button">
+                    <a href="saratogaschedule.html">Saratoga Springs</a>
+                </div>
             </div>
-            <div class="templeinfo-button" id="temple-btn2">
-                <a href="templeclosureschedule.html">Temple Closure Schedule</a>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Payson Utah Temple">
+                </div>
+                <div class="temple-button">
+                    <a href="paysonschedule.html">Payson</a>
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Ogden Utah Temple">
+                </div>
+                <div class="temple-button">
+                    <a href="ogdenschedule.html">Ogden</a>
+                </div>
+            </div>
+            <div class="t-cards">
+                <div class="cards">
+                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
+                </div>
+                <div class="temple-button">
+                    <a href="laytonschedule.html">Layton</a>
+                </div>
             </div>
         </div>
-        <div id="cardborder">
-            <div class="templeCards"></div>
-        </div>
+
         <div class="quote">
             <h3>Temple Quote</h3>
             <p>"When you come to the temple you will love your family with a deeper
                 love than you have ever felt before. The temple is about families."<br>
                 —Richard H. Winkel</p>
         </div>
-
     </main>
     <!-- FOOTER HERE -->
     <footer>
@@ -121,7 +146,6 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/temples.js"></script>
 </body>
 
 </html>
