--- a/templeinn/home.html
+++ b/templeinn/home.html
@@ -49,7 +49,7 @@
     <!-- CONTENT HERE -->
     <main>
         <div class="page-intro">
-            <h2>Our Mission</h2>
+            <h2>Welcome to the Temple Inn and Suites</h2>
             <p>
                 The Temple Inn and Suites is dedicated to providing a beautiful, comfortable, and peaceful
                 place for members of the Church of Jesus Christ to stay when attending or serving in the
@@ -77,12 +77,42 @@
             <div class="cards">
                 <img class="all-images" src="images/SaratogaSpringsUtahTemple3.jpg" alt="Saratoga Springs Temple">
             </div>
+            <div class="block weather">
+                <div class="cards" id="currentWeather">
+                    <div class="today-w"></div>
+                    <h2>Current Weather Conditions</h2>
+                    <hr>
+                    <span id="iconsrc"><img id="weather-icon" src="" alt="" /></span>
+                    <p>Temperature: <span id="temp"></span></p>
+                    <p>Condition Description: <span id="con-desc"></span></p>
+                    <p>Humidity: <span id="humidity"></span></p>
+                </div>
 
-            <div class="cards">
-                <h2>Current Weather Conditions</h2>
-            </div>
-            <div class="cards">
-                <h2>Three Day Weather Forecast</h2>
+                <table id="tdf-title">
+                    <tr>
+                        <th colspan="3">3 Day Weather Forecast</th>
+                    </tr>
+                    <tr>
+                        <th class="day"></th>
+                        <th class="day"></th>
+                        <th class="day"></th>
+                    </tr>
+                    <tr>
+                        <td class="f-icon"><img src="#" alt="" class="w-icon"></td>
+                        <td class="f-icon"><img src="#" alt="" class="w-icon"></td>
+                        <td class="f-icon"><img src="#" alt="" class="w-icon"></td>
+                    </tr>
+                    <tr>
+                        <td class="d-temp"></td>
+                        <td class="d-temp"></td>
+                        <td class="d-temp"></td>
+                    </tr>
+
+                </table>
+
+                <div class="cards">
+                    <h2>Three Day Weather Forecast</h2>
+                </div>
             </div>
         </div>
     </main>
