--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -62,32 +62,127 @@
                     <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
                         alt="Saratoga Springs Utah Temple">
                 </div>
-                <div class="temple-button">
-                    <a href="saratogaschedule.html">Saratoga Springs</a>
+                <div class="templeInfo">
+                    <h2>Saratoga Springs</h2>
+                    <h3>Address</h3>
+                    <p>987 South Ensign Drive<br>
+                        Saratoga Springs, Utah 84045</p>
+                    <h3>Phone Number</h3>
+                    <p>(801) 000-0000</p>
+                    <h3>E-mail</h3>
+                    <p>saratogaspringsutahtemple@lds.org</p>
+                    <h3>Services: </h3>
+                    <p>Services: Clothing rental, No cafeteria, NO patron housing,
+                        No distribution center nearby</p>
+                    <h3>History: </h3>
+                    <p><b>Announcement:</b> 2 April 2017</p>
+                    <p><b>Announcement:</b> 2 April 2017</p>
+                    <p><b>Groundbreaking:</b> 19 October 2019 by Craig C. Christensen</p>
+                    <p><b>Dedication:</b> Estimated completion in late 2022</p>
+                </div>
+                <div class="templeBtn-grid">
+                    <div class="temple-button1">
+                        <a href="saratogaschedule.html">Temple Schedule</a>
+                    </div>
+                    <div class="temple-button2">
+                        <a href="saratogaclosure.html">Temple Closures</a>
+                    </div>
                 </div>
             </div>
+
+
             <div class="t-cards">
                 <div class="cards">
                     <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Payson Utah Temple">
                 </div>
-                <div class="temple-button">
-                    <a href="paysonschedule.html">Payson</a>
+                <div class="templeInfo">
+                    <h2>Payson</h2>
+                    <h3>Address:</h3>
+                    <p>1400 East Oakhills Drive<br>
+                        Layton, Utah 84651</p>
+                    <h3>Phone Number</h3>
+                    <p>(801)754-4949</p>
+                    <h3>E-mail</h3>
+                    <p>paysonutahtemple@lds.org</p>
+                    <h3>Services:</h3>
+                    <p>Services: Clothing rental, NO cafeteria, NO patron housing,
+                        Distribution center nearby</p>
+                    <h3>History:</h3>
+                    <p><b>Announcement:</b> 25 January 2010</p>
+                    <p><b>Announcement:</b> 25 January 2010</p>
+                    <p><b>Dedication:</b> 7 June 2015 by Henry B. Eyring</p>
+                </div>
+                <div class="templeBtn-grid">
+                    <div class="temple-button1">
+                        <a href="paysonschedule.html">Temple Schedule</a>
+                    </div>
+                    <div class="temple-button2">
+                        <a href="paysonclosure.html">Temple Closures</a>
+                    </div>
                 </div>
             </div>
+
+
             <div class="t-cards">
                 <div class="cards">
                     <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Ogden Utah Temple">
                 </div>
-                <div class="temple-button">
-                    <a href="ogdenschedule.html">Ogden</a>
+                <div class="templeInfo">
+                    <h2>Ogden</h2>
+                    <h3>Address:</h3>
+                    <p>350 22nd Street<br>
+                        Ogden, Utah 84401</p>
+                    <h3>Phone Number</h3>
+                    <p>(801)621-6880</p>
+                    <h3>E-mail</h3>
+                    <p>ogdenutahtemple@lds.org</p>
+                    <h3>Services:</h3>
+                    <p>Services: Clothing rental, NO cafeteria, NO patron housing,
+                        Distribution center nearby</p>
+                    <h3>History:</h3>
+                    <p><b>Announcement:</b> 24 August 1967</p>
+                    <p><b>Announcement:</b> 24 August 1967</p>
+                    <p><b>Dedication:</b> 18–20 January 1972 by Joseph Fielding Smith</p>
+                </div>
+                <div class="templeBtn-grid">
+                    <div class="temple-button1">
+                        <a href="ogdenschedule.html">Temple Schedule</a>
+                    </div>
+                    <div class="temple-button2">
+                        <a href="ogdenclosure.html">Temple Closures</a>
+                    </div>
                 </div>
             </div>
+
+
             <div class="t-cards">
                 <div class="cards">
                     <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
                 </div>
-                <div class="temple-button">
-                    <a href="laytonschedule.html">Layton</a>
+                <div class="templeInfo">
+                    <h2>Layton</h2>
+                    <h3>Address:</h3>
+                    <p>1400 East Oakhills Drive<br>
+                        Layton, Utah 84040</p>
+                    <h3>Phone Number</h3>
+                    <p>(000)000-0000</p>
+                    <h3>E-mail</h3>
+                    <p>laytonutahtemple@lds.org</p>
+                    <h3>Services:</h3>
+                    <p>Services: Clothing rental, No cafeteria, NO patron housing,
+                        No distribution center nearby</p>
+                    <h3>History:</h3>
+                    <p><b>Announcement:</b> 1 April 2018</p>
+                    <p><b>Groundbreaking:</b> 23 May 2020 by Craig C. Christensen</p>
+                    <p><b>Dedication:</b> Estimated completion in early 2023</p>
+                </div>
+                <div class="templeBtn-grid">
+                    <div class="temple-button1">
+                        <a href="laytonschedule.html">Temple Schedule</a>
+                    </div>
+                    <div class="temple-button2">
+                        <a href="laytonsclosure.html">Temple Closures</a>
+                    </div>
                 </div>
             </div>
         </div>
