--- a/templeinn/laytonschedule.html
+++ b/templeinn/laytonschedule.html
@@ -56,7 +56,20 @@
                     helpful information about the following temples that are located closest to our hotels.</p>
             </div>
             <div>
+                <div id="back-button">
+                    <a href="temples.html">
+                        <-Back to Temples </a>
+                </div>
 
+
+
+            </div>
+            <div class="quote">
+                <h3>Temple Quote</h3>
+                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
+                    This is not the only temple we shall build; there will be hundreds of them built and
+                    dedicated to the Lord."
+                    —Brigham Young</p>
             </div>
 
     </main>
