--- a/templeinn/paysonclosure.html
+++ b/templeinn/paysonclosure.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payson Temple Ordinances Schedule</title>
-    <meta name="description" content="Payson temple ordinance schedule and temple closures" />
+    <title>Layton Temple Ordinances Schedule</title>
+    <meta name="description" content="Ogden temple ordinance schedule and temple closures" />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -62,15 +62,17 @@
                 </div>
 
 
+
             </div>
             <div class="quote">
                 <h3>Temple Quote</h3>
-                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
-                    This is not the only temple we shall build; there will be hundreds of them built and
-                    dedicated to the Lord."
-                    —Brigham Young</p>
+                <p> "There are more temples across the earth than there have ever been. More people in all the world
+                    have felt the Spirit of Elijah move them to record the identities and facts of their ancestors'
+                    lives."
+                    —Henry B. Eyring
+                </p>
             </div>
-        </div>
+
     </main>
     <!-- FOOTER HERE -->
     <footer>
@@ -119,6 +121,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/laytonschedule.js"></script>
 </body>
 
 </html>
