--- a/templeinn/saratogaschedule.html
+++ b/templeinn/saratogaschedule.html
@@ -51,14 +51,18 @@
         <div id="">
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
-                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
-                    go as smoothly as possible. To help you prepare for your temple attendance we offer
-                    helpful information about the following temples that are located closest to our hotels.</p>
+                <p>Temple schedule is subject to change when needed. If you desire to go through the temple
+                    for a live Ordinances please call the temple to arrange an appointment.
+                </p>
             </div>
             <div>
                 <div id="back-button">
                     <a href="temples.html">
                         <-Back to Temples </a>
+                </div>
+                <div>
+                    <img src="images/SaratogaSpringsUtahTemple.jpg" alt="Saratoga Springs Temple">
+                    <div class="templeCards"></div>
                 </div>
 
 
