--- a/templeinn/saratogaschedule.html
+++ b/templeinn/saratogaschedule.html
@@ -62,7 +62,10 @@
                 </div>
                 <div>
                     <img src="images/SaratogaSpringsUtahTemple.jpg" alt="Saratoga Springs Temple">
-                    <div class="templeCards"></div>
+                    <div class="groups"></div>
+                </div>
+                <div>
+                    <div class=""></div>
                 </div>
 
 
@@ -124,6 +127,8 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/templeschedule.js"></script>
+
 </body>
 
 </html>
